--- a/apps/public-docsite-v9/src/Concepts/AdvancedConfiguration.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/AdvancedConfiguration.stories.mdx
@@ -116,7 +116,7 @@ Having multiple applications using `FluentProvider` on a single web page can cau
 
 ### React 18
 
-React 18 provides new [`createRoot`](https://react.dev/reference/react-dom/client/createRoot#parameters) API that allows to configure `identifierPrefix` on it:
+It's possible to handle id prefixing natively with React 18 using the [`createRoot`](https://react.dev/reference/react-dom/client/createRoot#parameters) API by configuring `identifierPrefix` on it:
 
 ```jsx
 import * as React from 'react';
