Map groupedList to Tree

--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
@@ -41,7 +41,7 @@ Check out the latest schedule information on the [v9 Component Roadmap](https://
 | DocumentCard           | [~Card](/docs/components-card-card--default)                                                                                                 |
 | Dropdown               | [~Dropdown](/docs/components-dropdown--default)                                                                                              |
 | Facepile               | [~AvatarGroup](/docs/components-avatargroup--default)                                                                                        |
-| GroupedList            |                                                                                                                                              |
+| GroupedList            | [~Tree](/docs/components-tree--default)                                                                                                      |
 | Icon                   | [(icons in react-icons)](/docs/concepts-developer-icons-icons--page)                                                                         |
 | IconButton             | [Button](/docs/components-button-button--default)                                                                                            |
 | Image                  | [Image](/docs/components-image--default)                                                                                                     |
