Address PR comments - many fixes

--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
@@ -19,9 +19,9 @@ Check out the latest schedule information on the [v9 Component Roadmap](https://
 |                        | [PresenceBadge](/docs/components-badge-presencebadge--default)                                                                               |
 | ActionButton           | [Button](/docs/components-button-button--default)                                                                                            |
 | ActivityItem           |                                                                                                                                              |
-| BasicList              | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24404181)_                                           |
 | Breadcrumb             | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24402993)_                                           |
-| CommandBarButton       |                                                                                                                                              |
+| CommandBar             | [Toolbar](/docs/components-toolbar--default)                                                                                                 |
+| CommandBarButton       | [ToolbarButton](/docs/components-toolbar--default)                                                                                           |
 | CommandButton          | [MenuButton](/docs/components-button-menubutton--default)                                                                                    |
 | CompoundButton         | [CompoundButton](/docs/components-button-compoundbutton--default)                                                                            |
 | Calendar               |                                                                                                                                              |
@@ -41,19 +41,24 @@ Check out the latest schedule information on the [v9 Component Roadmap](https://
 | DocumentCard           | [~Card](/docs/components-card-card--default)                                                                                                 |
 | Dropdown               | [~Dropdown](/docs/components-dropdown--default)                                                                                              |
 | Facepile               | [~AvatarGroup](/docs/components-avatargroup--default)                                                                                        |
+| FocusZone              | [Tabster](https://tabster.io/)                                                                                                               |
+| FocusTrapZone          | [Tabster](https://tabster.io/)                                                                                                               |
 | GroupedList            | [~Tree](/docs/components-tree--default)                                                                                                      |
-| Icon                   | [(icons in react-icons)](/docs/concepts-developer-icons-icons--page)                                                                         |
+| Icon                   | [@fluentui/react-icons package](/docs/concepts-developer-icons-icons--page)                                                                  |
 | IconButton             | [Button](/docs/components-button-button--default)                                                                                            |
 | Image                  | [Image](/docs/components-image--default)                                                                                                     |
+| Keytips                |                                                                                                                                              |
 | Label                  | [Label](/docs/components-label--default)                                                                                                     |
 | Layer                  | [Portal](/docs/components-portal--default)                                                                                                   |
 | Link                   | [Link](/docs/components-link--default)                                                                                                       |
+| List                   | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24404181)_                                           |
 | MessageBar             | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24402474)_                                           |
 | Modal                  | [Dialog](/docs/components-dialog--default)                                                                                                   |
 | Nav                    | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24403433)_                                           |
 | OverflowSet            | priority-overflow                                                                                                                            |
 | Overlay                | [Portal](/docs/components-portal--default)                                                                                                   |
 | Panel                  | _[In Progess](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24402572)_                                            |
+| Popup                  | [Dialog](/docs/components-dialog--default)                                                                                                   |
 | PrimaryButton          | [Button](/docs/components-button-button--default)                                                                                            |
 | PeoplePicker           |                                                                                                                                              |
 | Persona                | [Avatar](/docs/components-avatar--default)                                                                                                   |
@@ -77,4 +82,7 @@ Check out the latest schedule information on the [v9 Component Roadmap](https://
 | Text                   | [Text](/docs/components-text--default)                                                                                                       |
 | TextField              | [Input](/docs/components-input--default)                                                                                                     |
 | ThemeProvider          | [FluentProvider](/docs/components-fluentprovider--default)                                                                                   |
+| TimePicker             | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24403279)_                                           |
 | ToggleButton           | [ToggleButton](/docs/components-button-togglebutton--default)                                                                                |
+| Toggle                 | [Switch](/docs/components-switch--default)                                                                                                   |
+| Tooltip                | [Tooltip](/docs/components-tooltip--default)                                                                                                 |
