--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
@@ -44,6 +44,7 @@ Check out the latest schedule information on the [v9 Component Roadmap](https://
 | FocusZone              | [Tabster](https://tabster.io/)                                                                                                               |
 | FocusTrapZone          | [Tabster](https://tabster.io/)                                                                                                               |
 | GroupedList            | [~Tree](/docs/components-tree--default)                                                                                                      |
+| HoverCard              |                                                                                                                                              |
 | Icon                   | [@fluentui/react-icons package](/docs/concepts-developer-icons-icons--page)                                                                  |
 | IconButton             | [Button](/docs/components-button-button--default)                                                                                            |
 | Image                  | [Image](/docs/components-image--default)                                                                                                     |
