--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV8/ComponentMapping.stories.mdx
@@ -19,6 +19,7 @@ Check out the latest schedule information on the [v9 Component Roadmap](https://
 |                        | [PresenceBadge](/docs/components-badge-presencebadge--default)                                                                               |
 | ActionButton           | [Button](/docs/components-button-button--default)                                                                                            |
 | ActivityItem           |                                                                                                                                              |
+| Announced              |                                                                                                                                              |
 | Breadcrumb             | _[In Progress](https://github.com/orgs/microsoft/projects/786/views/1?pane=issue&itemId=24402993)_                                           |
 | CommandBar             | [Toolbar](/docs/components-toolbar--default)                                                                                                 |
 | CommandBarButton       | [ToolbarButton](/docs/components-toolbar--default)                                                                                           |
